# airo_control_interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  current_todo.txt  package.xml
airo_control/: .gitignore  CMakeLists.txt  package.xml  sim.sh
airo_control/acados_scripts/: acados_ocp_nlp.json  generate_c_code.m  network_model_hybrid.mat  network_model_hybrid_reduced.mat  q_r_covariances.py  quadrotor_model.py  quadrotor_model_ekf.py  quadrotor_tailsitter_hybrid.m  quadrotor_tailsitter_hybrid_reduced.m
airo_control/acados_scripts/c_generated_code/: CMakeLists.txt  acados_mex_create_quadrotor_tailsitter_hybrid.c  acados_mex_create_quadrotor_tailsitter_hybrid.mexa64  acados_mex_create_quadrotor_tailsitter_hybrid_reduced.c  acados_mex_create_quadrotor_tailsitter_hybrid_reduced.mexa64  acados_mex_free_quadrotor_tailsitter_hybrid.c  acados_mex_free_quadrotor_tailsitter_hybrid.mexa64  acados_mex_free_quadrotor_tailsitter_hybrid_reduced.c  acados_mex_free_quadrotor_tailsitter_hybrid_reduced.mexa64  acados_mex_set_quadrotor_tailsitter_hybrid.c  acados_mex_set_quadrotor_tailsitter_hybrid.mexa64  acados_mex_set_quadrotor_tailsitter_hybrid_reduced.c  acados_mex_set_quadrotor_tailsitter_hybrid_reduced.mexa64  acados_mex_solve_quadrotor_tailsitter_hybrid.c  acados_mex_solve_quadrotor_tailsitter_hybrid.mexa64  acados_mex_solve_quadrotor_tailsitter_hybrid_reduced.c  acados_mex_solve_quadrotor_tailsitter_hybrid_reduced.mexa64  acados_sim_solver_quadrotor_tailsitter_hybrid.c  acados_sim_solver_quadrotor_tailsitter_hybrid.h  acados_sim_solver_quadrotor_tailsitter_hybrid_reduced.c  acados_sim_solver_quadrotor_tailsitter_hybrid_reduced.h  acados_sim_solver_sfunction_quadrotor_tailsitter_hybrid.c  acados_sim_solver_sfunction_quadrotor_tailsitter_hybrid_reduced.c  acados_solver_quadrotor.h  acados_solver_quadrotor_tailsitter_hybrid.c  acados_solver_quadrotor_tailsitter_hybrid.h  acados_solver_quadrotor_tailsitter_hybrid_reduced.c  acados_solver_quadrotor_tailsitter_hybrid_reduced.h  acados_solver_sfunction_quadrotor_tailsitter_hybrid.c  acados_solver_sfunction_quadrotor_tailsitter_hybrid_reduced.c  main_mex_quadrotor_tailsitter_hybrid.c  main_mex_quadrotor_tailsitter_hybrid_reduced.c  main_quadrotor_tailsitter_hybrid.c  main_quadrotor_tailsitter_hybrid_reduced.c  main_sim_quadrotor_tailsitter_hybrid.c  main_sim_quadrotor_tailsitter_hybrid_reduced.c  make_main_mex_quadrotor_tailsitter_hybrid.m  make_main_mex_quadrotor_tailsitter_hybrid_reduced.m  make_mex_quadrotor_tailsitter_hybrid.m  make_mex_quadrotor_tailsitter_hybrid_reduced.m  (+4 more)
airo_control/acados_scripts/c_generated_code/quadrotor_constraints/: quadrotor_constraints.h
airo_control/acados_scripts/c_generated_code/quadrotor_cost/: quadrotor_cost.h  quadrotor_cost_y_0_fun.c  quadrotor_cost_y_0_fun_jac_ut_xt.c  quadrotor_cost_y_0_hess.c  quadrotor_cost_y_e_fun.c  quadrotor_cost_y_e_fun_jac_ut_xt.c  quadrotor_cost_y_e_hess.c  quadrotor_cost_y_fun.c  quadrotor_cost_y_fun_jac_ut_xt.c  quadrotor_cost_y_hess.c
airo_control/acados_scripts/c_generated_code/quadrotor_model/: quadrotor_expl_ode_fun.c  quadrotor_expl_vde_adj.c  quadrotor_expl_vde_forw.c  quadrotor_model.h
airo_control/acados_scripts/c_generated_code/quadrotor_tailsitter_hybrid_constraints/: quadrotor_tailsitter_hybrid_constraints.h
airo_control/config/: fsm.yaml  gazebo_fsm.yaml  gazebo_param.yaml  mpc.yaml  vicon_fsm.yaml  vicon_mpc.yaml  vicon_param.yaml  vicon_quadrotor.yaml
airo_control/config/gazebo/: backstepping_gazebo.yaml  disturbance_observer.yaml  fsm_gazebo.yaml  hmpc_gazebo.yaml  mpc_gazebo.yaml  slidingmode_gazebo.yaml  thrust_model_gazebo.yaml
airo_control/config/gazebo/controller/: backstepping_gazebo.yaml  mpc_gazebo.yaml  slidingmode_gazebo.yaml
airo_control/config/vicon/: backstepping_vicon.yaml  disturbance_observer.yaml  fsm_vicon.yaml  hmpc_reduced_vicon.yaml  mpc_vicon.yaml  slidingmode_vicon.yaml  thrust_model.yaml  thrust_model_vicon.yaml
airo_control/include/airo_control/: airo_control_fsm.h  airo_control_fsm_ekf.h  disturbance_observer.h  ekf.h  observer_ekf.h  quadrotor_mpc.h  rc_input.h
airo_control/launch/: fsm.launch  gazebo_fsm.launch  gazebo_system_id.launch  mavros_px4.launch  system_id.launch  system_id_gazebo.launch  system_id_vicon.launch  vicon_fsm.launch  vicon_system_id.launch  vrpn.launch
airo_control/launch/gazebo/: ekf_fsm_gazebo.launch  fsm_gazebo.launch  mavros_gazebo.launch  system_id_gazebo.launch
airo_control/launch/vicon/: fsm_vicon.launch  mavros_vicon.launch  system_id_vicon.launch  vrpn.launch
airo_control/msg/: Reference.msg
airo_control/scripts/: quadrotor.py
airo_control/src/: .~lock.tracking.csv#  aerial_grasping.cpp  aerial_grasping_sav.cpp  airo_control_fsm.cpp  airo_control_fsm_ekf.cpp  airo_control_node.cpp  airo_control_node_ekf.cpp  applybodywench.cpp  applybodywrench.cpp  disturbance_observer.cpp  example_mission_node.cpp  init_applybodywrench.cpp  mass.cpp  observer_ekf.cpp  one_pt_test.cpp  pwm_input.cpp  quadrotor_mpc.cpp  rc_input.cpp  system_identification.cpp  tracking.csv  tracking_q1_r1.csv  tracking_r_0.5.csv
airo_control/src/controller/: backstepping.cpp  base_controller.cpp  hmpc.cpp  hmpc_reduced.cpp  mpc.cpp  observer_ekf.cpp  slidingmode.cpp  test  test.cpp
airo_control/src/log/: disturbance_tracking_fx1.csv
airo_control/src/mpc_eva/: mpc_eva_node.cpp
airo_control/src/observer/: ekf_observer.cpp  rd3_observer.cpp
airo_message/: CMakeLists.txt  package.xml
airo_message/msg/: FSMInfo.msg  Reference.msg  ReferencePreview.msg  TakeoffLandTrigger.msg
airo_trajectory/: CMakeLists.txt  package.xml
airo_trajectory/config/: airo_trajectory_param.yaml
airo_trajectory/include/airo_trajectory/: airo_trajectory_server.h  airo_trajectory_server.hpp
airo_trajectory/launch/: example_mission_node.launch
airo_trajectory/src/: airo_trajectory_server.cpp  circle_mission_node.cpp  example_mission_node.cpp  trajectory_mission_node.cpp
airo_trajectory/traj/: circle.py  circle.txt  lemniscate.py  lemniscate.txt  points.py  points.txt  poly_ref.txt  polynomial.py  polynomial.txt
(+65 files in other folders)
